--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -294,6 +294,7 @@
     <Content Include="Views\Tag\List.cshtml" />
     <Content Include="Views\AboutUs\Index.cshtml" />
     <Content Include="Views\AboutUs\Contacts.cshtml" />
+    <Content Include="Views\Article\ListUserArticle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
