--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -300,6 +300,7 @@
     <Content Include="Views\AboutUs\Index.cshtml" />
     <Content Include="Views\AboutUs\Contacts.cshtml" />
     <Content Include="Views\Article\ListUserArticle.cshtml" />
+    <Content Include="Views\Comment\ListUserComments.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
