--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -195,10 +195,12 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Controllers\AboutUsController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Admin\CategoryController.cs" />
     <Compile Include="Controllers\Admin\UserController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SliderController.cs" />
@@ -213,6 +215,7 @@
     <Compile Include="Models\ArticleViewModel.cs" />
     <Compile Include="Models\BlogDbContext.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\EditUserViewModel.cs" />
     <Compile Include="Models\Gallery.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -222,7 +225,11 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\BackGroundHummer.jpg" />
     <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\images\profile\admin%40admin.com.png" />
+    <Content Include="Content\images\profile\s%40s.bg.png" />
+    <Content Include="Content\images\profile\v%40v.bg.png" />
     <Content Include="Content\jquery.bxslider.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -301,10 +308,15 @@
     <Content Include="Views\Slider\DeleteImages.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Gallery.cshtml" />
     <Content Include="Views\Comment\ListUserComments.cshtml" />
+    <Content Include="Views\AboutUs\Contacts.cshtml" />
+    <Content Include="Views\AboutUs\Index.cshtml" />
+    <Content Include="Views\Article\ListUserArticle.cshtml" />
+    <Content Include="Views\Comment\Create.cshtml" />
+    <Content Include="Views\Comment\Delete.cshtml" />
+    <Content Include="Views\Comment\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\images\" />
     <Folder Include="Views\NewFolder1\" />
   </ItemGroup>
   <ItemGroup>
