--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -259,6 +259,7 @@
     <Content Include="Content\images\Facts\Fact 7.jpg" />
     <Content Include="Content\images\Facts\Fact 8.jpg" />
     <Content Include="Content\images\Facts\Fact 9.jpg" />
+    <Content Include="Content\images\githubLogo.jpg" />
     <Content Include="Content\images\HomePic\shareLogo.png" />
     <Content Include="Content\images\profile\admin%40admin.com.png" />
     <Content Include="Content\images\profile\v%40v.bg.png" />
